[gd_scene load_steps=23 format=3 uid="uid://wr0bal1t33v5"]

[ext_resource type="Script" path="res://src/player/PlayerHealth.gd" id="1_mdk3r"]
[ext_resource type="Script" path="res://src/player/PlayerController.gd" id="1_n6x0h"]
[ext_resource type="Theme" uid="uid://cs53vtwmuxfcq" path="res://UITheme.tres" id="2_3sd15"]
[ext_resource type="Script" path="res://src/menus/PauseMenu.gd" id="2_32g0p"]
[ext_resource type="Script" path="res://src/menus/PlayerControllerMenu.gd" id="3_gqoye"]
[ext_resource type="Script" path="res://src/menus/GameMenu.gd" id="4_y1e38"]
[ext_resource type="Script" path="res://src/menus/GameOverMenu.gd" id="5_41kut"]
[ext_resource type="PackedScene" uid="uid://gyanoo81ygvr" path="res://src/prefabs/bullet.tscn" id="6_gk67w"]
[ext_resource type="Script" path="res://src/player/Gun.gd" id="6_t1ta0"]
[ext_resource type="Script" path="res://src/enemy/EnemySpawn.gd" id="8_3tvd4"]
[ext_resource type="PackedScene" uid="uid://cwheupcsc54i2" path="res://src/prefabs/Enemy.tscn" id="9_bubfs"]

[sub_resource type="Gradient" id="Gradient_mg3hq"]
offsets = PackedFloat32Array(0, 0.135484)
colors = PackedColorArray(0.728822, 0.728822, 0.728822, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vklob"]
gradient = SubResource("Gradient_mg3hq")
fill_from = Vector2(1, 0.995652)

[sub_resource type="Gradient" id="Gradient_l2j77"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0.698039, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_v1ifi"]
gradient = SubResource("Gradient_l2j77")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hv0ns"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywvkn"]
bg_color = Color(0.403922, 0.682353, 0.360784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Gradient" id="Gradient_f8jgo"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4c0jx"]
gradient = SubResource("Gradient_f8jgo")

[sub_resource type="CanvasTexture" id="CanvasTexture_gde37"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vj7qx"]
size = Vector2(20, 1.9)

[sub_resource type="CanvasTexture" id="CanvasTexture_5sge0"]

[node name="Main" type="Node2D"]
position = Vector2(559, 325)

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(-7, 5)
floor_stop_on_slope = false
script = ExtResource("1_n6x0h")

[node name="Camera2D" type="Camera2D" parent="Player"]
z_index = 10

[node name="PauseMenu" type="Control" parent="Player/Camera2D"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -572.0
offset_top = -326.0
offset_right = 576.0
offset_bottom = 322.0
script = ExtResource("2_32g0p")

[node name="VBoxContainer" type="VBoxContainer" parent="Player/Camera2D/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Player/Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="OptionsButton" type="Button" parent="Player/Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="Player/Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PlayerControllerMenu" type="Control" parent="Player/Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -572.0
offset_top = -326.0
offset_right = 576.0
offset_bottom = 322.0
script = ExtResource("3_gqoye")

[node name="Container" type="VBoxContainer" parent="Player/Camera2D/PlayerControllerMenu"]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 131.0
offset_bottom = 256.0

[node name="HorizontalSpeed" type="ProgressBar" parent="Player/Camera2D/PlayerControllerMenu/Container"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
max_value = 4000.0
step = 1.0
show_percentage = false

[node name="Label" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container/HorizontalSpeed"]
layout_mode = 0
offset_right = 116.0
offset_bottom = 29.0
text = "x:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VerticalSpeed" type="ProgressBar" parent="Player/Camera2D/PlayerControllerMenu/Container"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
max_value = 4000.0
step = 1.0
show_percentage = false

[node name="Label" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container/VerticalSpeed"]
layout_mode = 0
offset_right = 116.0
offset_bottom = 29.0
text = "y:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WallJumps" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container"]
layout_mode = 2
text = "Wall Jumps:"

[node name="CanWallJump" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container"]
layout_mode = 2
text = "Can Wall Jump:"

[node name="IsGrounded" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container"]
layout_mode = 2
text = "Grounded:"

[node name="IsWallSliding" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container"]
layout_mode = 2
text = "Wall Sliding:"

[node name="IsJumping" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container"]
layout_mode = 2
text = "Jumping:"

[node name="IsSprinting" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container"]
layout_mode = 2
text = "Sprinting:"

[node name="IsDashing" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container"]
layout_mode = 2
text = "Dashing:"

[node name="CanDoubleJump" type="Label" parent="Player/Camera2D/PlayerControllerMenu/Container"]
layout_mode = 2
text = "Double Jump:"

[node name="GameMenu" type="Control" parent="Player/Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -562.0
offset_top = -328.0
offset_right = 590.0
offset_bottom = 324.0
script = ExtResource("4_y1e38")

[node name="VBoxContainer" type="VBoxContainer" parent="Player/Camera2D/GameMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 56.0
grow_horizontal = 0

[node name="Time" type="Label" parent="Player/Camera2D/GameMenu/VBoxContainer"]
layout_mode = 2
text = "Time:"

[node name="Score" type="Label" parent="Player/Camera2D/GameMenu/VBoxContainer"]
layout_mode = 2
text = "Score:"

[node name="GameOverMenu" type="Control" parent="Player/Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -545.0
offset_top = -328.0
offset_right = 574.0
offset_bottom = 323.0
script = ExtResource("5_41kut")

[node name="VBoxContainer" type="VBoxContainer" parent="Player/Camera2D/GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="Player/Camera2D/GameOverMenu/VBoxContainer"]
layout_mode = 2
text = "Score:"
horizontal_alignment = 1

[node name="Replay" type="Button" parent="Player/Camera2D/GameOverMenu/VBoxContainer"]
layout_mode = 2
text = "Play Again?"

[node name="Quit" type="Button" parent="Player/Camera2D/GameOverMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Body" type="Sprite2D" parent="Player"]
z_index = 1
position = Vector2(-1.0848e-05, -2.6226e-06)
scale = Vector2(0.3125, 0.3125)
texture = SubResource("GradientTexture2D_vklob")

[node name="Headband" type="Sprite2D" parent="Player/Body"]
z_index = 2
position = Vector2(-0.000106812, -20.8)
scale = Vector2(0.249999, -9.60006)
texture = SubResource("GradientTexture1D_v1ifi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_hv0ns")

[node name="PlayerHealth" type="Panel" parent="Player"]
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = -14.0
theme = ExtResource("2_3sd15")
script = ExtResource("1_mdk3r")

[node name="HealthPanel" type="Panel" parent="Player/PlayerHealth"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 5.0
theme = ExtResource("2_3sd15")
theme_override_styles/panel = SubResource("StyleBoxFlat_ywvkn")

[node name="RightWall" type="RayCast2D" parent="Player"]
position = Vector2(0, 1)
rotation = -1.5708
target_position = Vector2(2.08165e-12, 15)

[node name="LeftWall" type="RayCast2D" parent="Player"]
position = Vector2(0, 1)
rotation = 1.5708
target_position = Vector2(2.08165e-12, 15)

[node name="Gun" type="Node2D" parent="Player"]
position = Vector2(0, 2)
script = ExtResource("6_t1ta0")
bullet_scene = ExtResource("6_gk67w")
bullet_speed = 2000.0

[node name="Sprite2D" type="Sprite2D" parent="Player/Gun"]
position = Vector2(0, 0.500013)
scale = Vector2(0.375, 0.0781251)
texture = SubResource("GradientTexture2D_4c0jx")
offset = Vector2(32, 2.08165e-12)

[node name="SpawnPosition" type="Node2D" parent="Player/Gun"]
position = Vector2(25, 0)

[node name="Floors" type="Node" parent="."]

[node name="Floor3" type="StaticBody2D" parent="Floors"]
position = Vector2(1059, 425)
rotation = -0.802851

[node name="Sprite2D" type="Sprite2D" parent="Floors/Floor3"]
scale = Vector2(2000, 20)
texture = SubResource("CanvasTexture_gde37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors/Floor3"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(100, 10)
shape = SubResource("RectangleShape2D_vj7qx")

[node name="Floor2" type="StaticBody2D" parent="Floors"]
position = Vector2(559, 375)
rotation = -0.0872665

[node name="Sprite2D" type="Sprite2D" parent="Floors/Floor2"]
scale = Vector2(2000, 20)
texture = SubResource("CanvasTexture_gde37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors/Floor2"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(100, 10)
shape = SubResource("RectangleShape2D_vj7qx")

[node name="Floor" type="StaticBody2D" parent="Floors"]
position = Vector2(559, 350)

[node name="Sprite2D" type="Sprite2D" parent="Floors/Floor"]
scale = Vector2(2000, 20)
texture = SubResource("CanvasTexture_gde37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors/Floor"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(100, 10)
shape = SubResource("RectangleShape2D_vj7qx")

[node name="Floor4" type="StaticBody2D" parent="Floors"]
position = Vector2(11, -69)
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="Floors/Floor4"]
scale = Vector2(2000, 20)
texture = SubResource("CanvasTexture_gde37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors/Floor4"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(100, 10)
shape = SubResource("RectangleShape2D_vj7qx")

[node name="Floor6" type="StaticBody2D" parent="Floors"]
position = Vector2(333, -823)
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="Floors/Floor6"]
scale = Vector2(2000, 20)
texture = SubResource("CanvasTexture_gde37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors/Floor6"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(100, 10)
shape = SubResource("RectangleShape2D_vj7qx")

[node name="Floor7" type="StaticBody2D" parent="Floors"]
position = Vector2(657, -902)
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="Floors/Floor7"]
scale = Vector2(2000, 20)
texture = SubResource("CanvasTexture_gde37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors/Floor7"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(100, 10)
shape = SubResource("RectangleShape2D_vj7qx")

[node name="Floor5" type="StaticBody2D" parent="Floors"]
position = Vector2(388, -1327)
rotation = -0.802851

[node name="Sprite2D" type="Sprite2D" parent="Floors/Floor5"]
scale = Vector2(2000, 20)
texture = SubResource("CanvasTexture_gde37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors/Floor5"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(100, 10)
shape = SubResource("RectangleShape2D_vj7qx")

[node name="EnemySpawn" type="Node2D" parent="."]
position = Vector2(361, -154)
script = ExtResource("8_3tvd4")
enemy_scene = ExtResource("9_bubfs")

[node name="Sprite2D" type="Sprite2D" parent="EnemySpawn"]
rotation = 0.785398
scale = Vector2(8, 8)
texture = SubResource("CanvasTexture_5sge0")

[connection signal="pressed" from="Player/Camera2D/PauseMenu/VBoxContainer/ResumeButton" to="Player/Camera2D/PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="Player/Camera2D/PauseMenu/VBoxContainer/OptionsButton" to="Player/Camera2D/PauseMenu" method="_on_options_button_pressed"]
[connection signal="pressed" from="Player/Camera2D/PauseMenu/VBoxContainer/QuitButton" to="Player/Camera2D/PauseMenu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Player/Camera2D/GameOverMenu/VBoxContainer/Replay" to="Player/Camera2D/GameOverMenu" method="_on_replay_pressed"]
[connection signal="pressed" from="Player/Camera2D/GameOverMenu/VBoxContainer/Quit" to="Player/Camera2D/GameOverMenu" method="_on_quit_pressed"]
